version/0.5/_sources/_autosummary/ansys.api.pyensight.ens_part_mat_interface.ENS_PART_MAT_INTERFACE.rst.txt
ENS\_PART\_MAT\_INTERFACE
=========================

.. currentmodule:: ansys.api.pyensight.ens_part_mat_interface

.. autoclass:: ENS_PART_MAT_INTERFACE

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      ENS_PART_MAT_INTERFACE.attrgroupinfo
      
      
      ENS_PART_MAT_INTERFACE.attrinfo
      
      
      ENS_PART_MAT_INTERFACE.attrissensitive
      
      
      ENS_PART_MAT_INTERFACE.attrtree
      
      
      ENS_PART_MAT_INTERFACE.cmdlang_rec_info
      
      
      ENS_PART_MAT_INTERFACE.createpart
      
      
      ENS_PART_MAT_INTERFACE.destroy
      
      
      ENS_PART_MAT_INTERFACE.get_values
      
      
      ENS_PART_MAT_INTERFACE.getattr
      
      
      ENS_PART_MAT_INTERFACE.getattrs
      
      
      ENS_PART_MAT_INTERFACE.getmetatag
      
      
      ENS_PART_MAT_INTERFACE.hasmetatag
      
      
      ENS_PART_MAT_INTERFACE.populate_attr_list
      
      
      ENS_PART_MAT_INTERFACE.realtimemode
      
      
      ENS_PART_MAT_INTERFACE.setattr
      
      
      ENS_PART_MAT_INTERFACE.setattr_begin
      
      
      ENS_PART_MAT_INTERFACE.setattr_end
      
      
      ENS_PART_MAT_INTERFACE.setattr_status
      
      
      ENS_PART_MAT_INTERFACE.setattrs
      
      
      ENS_PART_MAT_INTERFACE.setmetatag
      
      
      ENS_PART_MAT_INTERFACE.tracepaths
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ENS_PART_MAT_INTERFACE.ACTIVE
      ENS_PART_MAT_INTERFACE.ADJCOORDSCALEFACTOR
      ENS_PART_MAT_INTERFACE.ADJCOORDTRANSVEC
      ENS_PART_MAT_INTERFACE.ADJCOORDVARSCALEFACTOR
      ENS_PART_MAT_INTERFACE.ADJCOORDXVARIABLE
      ENS_PART_MAT_INTERFACE.ADJCOORDYVARIABLE
      ENS_PART_MAT_INTERFACE.ADJCOORDZVARIABLE
      ENS_PART_MAT_INTERFACE.ALPHABY
      ENS_PART_MAT_INTERFACE.ALPHABYPALETTE
      ENS_PART_MAT_INTERFACE.BOUNDINGREP
      ENS_PART_MAT_INTERFACE.CASENUMBER
      ENS_PART_MAT_INTERFACE.CLIP
      ENS_PART_MAT_INTERFACE.COLORBYPALETTE
      ENS_PART_MAT_INTERFACE.COLORBYRGB
      ENS_PART_MAT_INTERFACE.CULLELEMENTS
      ENS_PART_MAT_INTERFACE.DESCRIPTION
      ENS_PART_MAT_INTERFACE.DISPLACEBY
      ENS_PART_MAT_INTERFACE.DISPLACEFACTOR
      ENS_PART_MAT_INTERFACE.DOUBLESIDED
      ENS_PART_MAT_INTERFACE.DTA_BLOCK
      ENS_PART_MAT_INTERFACE.EDIT_TARGET
      ENS_PART_MAT_INTERFACE.ELTBLANKING
      ENS_PART_MAT_INTERFACE.ELTDEFINEDBY
      ENS_PART_MAT_INTERFACE.ELTFEATUREANGLE
      ENS_PART_MAT_INTERFACE.ELTFILTER1ACTIVE
      ENS_PART_MAT_INTERFACE.ELTFILTER1TESTOP
      ENS_PART_MAT_INTERFACE.ELTFILTER1TESTVALUE
      ENS_PART_MAT_INTERFACE.ELTFILTER1TESTVARCOMP
      ENS_PART_MAT_INTERFACE.ELTFILTER1TESTVARIABLE
      ENS_PART_MAT_INTERFACE.ELTFILTER1VARCOMP
      ENS_PART_MAT_INTERFACE.ELTFILTER1VARIABLE
      ENS_PART_MAT_INTERFACE.ELTFILTER2ACTIVE
      ENS_PART_MAT_INTERFACE.ELTFILTER2LOGICALOP
      ENS_PART_MAT_INTERFACE.ELTFILTER2TESTOP
      ENS_PART_MAT_INTERFACE.ELTFILTER2TESTVALUE
      ENS_PART_MAT_INTERFACE.ELTFILTER2TESTVARCOMP
      ENS_PART_MAT_INTERFACE.ELTFILTER2TESTVARIABLE
      ENS_PART_MAT_INTERFACE.ELTFILTER2VARCOMP
      ENS_PART_MAT_INTERFACE.ELTFILTER2VARIABLE
      ENS_PART_MAT_INTERFACE.ELTFILTER3ACTIVE
      ENS_PART_MAT_INTERFACE.ELTFILTER3LOGICALOP
      ENS_PART_MAT_INTERFACE.ELTFILTER3TESTOP
      ENS_PART_MAT_INTERFACE.ELTFILTER3TESTVALUE
      ENS_PART_MAT_INTERFACE.ELTFILTER3TESTVARCOMP
      ENS_PART_MAT_INTERFACE.ELTFILTER3TESTVARIABLE
      ENS_PART_MAT_INTERFACE.ELTFILTER3VARCOMP
      ENS_PART_MAT_INTERFACE.ELTFILTER3VARIABLE
      ENS_PART_MAT_INTERFACE.ELTFILTER4ACTIVE
      ENS_PART_MAT_INTERFACE.ELTFILTER4LOGICALOP
      ENS_PART_MAT_INTERFACE.ELTFILTER4TESTOP
      ENS_PART_MAT_INTERFACE.ELTFILTER4TESTVALUE
      ENS_PART_MAT_INTERFACE.ELTFILTER4TESTVARCOMP
      ENS_PART_MAT_INTERFACE.ELTFILTER4TESTVARIABLE
      ENS_PART_MAT_INTERFACE.ELTFILTER4VARCOMP
      ENS_PART_MAT_INTERFACE.ELTFILTER4VARIABLE
      ENS_PART_MAT_INTERFACE.ELTFILTER5ACTIVE
      ENS_PART_MAT_INTERFACE.ELTFILTER5LOGICALOP
      ENS_PART_MAT_INTERFACE.ELTFILTER5TESTOP
      ENS_PART_MAT_INTERFACE.ELTFILTER5TESTVALUE
      ENS_PART_MAT_INTERFACE.ELTFILTER5TESTVARCOMP
      ENS_PART_MAT_INTERFACE.ELTFILTER5TESTVARIABLE
      ENS_PART_MAT_INTERFACE.ELTFILTER5VARCOMP
      ENS_PART_MAT_INTERFACE.ELTFILTER5VARIABLE
      ENS_PART_MAT_INTERFACE.ELTFILTER6ACTIVE
      ENS_PART_MAT_INTERFACE.ELTFILTER6LOGICALOP
      ENS_PART_MAT_INTERFACE.ELTFILTER6TESTOP
      ENS_PART_MAT_INTERFACE.ELTFILTER6TESTVALUE
      ENS_PART_MAT_INTERFACE.ELTFILTER6TESTVARCOMP
      ENS_PART_MAT_INTERFACE.ELTFILTER6TESTVARIABLE
      ENS_PART_MAT_INTERFACE.ELTFILTER6VARCOMP
      ENS_PART_MAT_INTERFACE.ELTFILTER6VARIABLE
      ENS_PART_MAT_INTERFACE.ELTREPPOINTSNORMALS
      ENS_PART_MAT_INTERFACE.ELTREPRESENTATION
      ENS_PART_MAT_INTERFACE.ELTSHRINKFACTOR
      ENS_PART_MAT_INTERFACE.ENS_DETAILS
      ENS_PART_MAT_INTERFACE.ENS_KIND
      ENS_PART_MAT_INTERFACE.ENS_MATERIAL
      ENS_PART_MAT_INTERFACE.ENS_PARENT_PART
      ENS_PART_MAT_INTERFACE.ENS_PLIST_KEY_SEL_0
      ENS_PART_MAT_INTERFACE.ENS_PLIST_KEY_SEL_1
      ENS_PART_MAT_INTERFACE.ENS_PLIST_KEY_SEL_2
      ENS_PART_MAT_INTERFACE.ENS_PLIST_KEY_SEL_3
      ENS_PART_MAT_INTERFACE.ENS_PLIST_KEY_SEL_4
      ENS_PART_MAT_INTERFACE.ENS_PLIST_KEY_SEL_5
      ENS_PART_MAT_INTERFACE.ENS_PLIST_KEY_SEL_6
      ENS_PART_MAT_INTERFACE.ENS_PLIST_KEY_SEL_7
      ENS_PART_MAT_INTERFACE.ENS_PLIST_KEY_SEL_8
      ENS_PART_MAT_INTERFACE.ENS_PLIST_KEY_SEL_9
      ENS_PART_MAT_INTERFACE.ENS_SYMMETRY_AXIS
      ENS_PART_MAT_INTERFACE.ENS_SYMMETRY_COUNT
      ENS_PART_MAT_INTERFACE.ENS_TURBO_STAGE
      ENS_PART_MAT_INTERFACE.ENS_TURBO_VDIM
      ENS_PART_MAT_INTERFACE.ENS_TURBO_VIEW
      ENS_PART_MAT_INTERFACE.ENS_UNITS_LABEL
      ENS_PART_MAT_INTERFACE.ENTITYLABELELT
      ENS_PART_MAT_INTERFACE.ENTITYLABELNODE
      ENS_PART_MAT_INTERFACE.FILLPATTERN
      ENS_PART_MAT_INTERFACE.HANDLES_ENABLED
      ENS_PART_MAT_INTERFACE.HAS0DELEMENTS
      ENS_PART_MAT_INTERFACE.HAS1DELEMENTS
      ENS_PART_MAT_INTERFACE.HAS2DELEMENTS
      ENS_PART_MAT_INTERFACE.HAS3DELEMENTS
      ENS_PART_MAT_INTERFACE.HIDDENLINE
      ENS_PART_MAT_INTERFACE.HIDDENSURFACE
      ENS_PART_MAT_INTERFACE.IJKAXIS
      ENS_PART_MAT_INTERFACE.IJKAXISSCALE
      ENS_PART_MAT_INTERFACE.ISGROUP
      ENS_PART_MAT_INTERFACE.LIGHTAMBIENT
      ENS_PART_MAT_INTERFACE.LIGHTDIFFUSE
      ENS_PART_MAT_INTERFACE.LIGHTEMISSIVE
      ENS_PART_MAT_INTERFACE.LIGHTREFRACTION
      ENS_PART_MAT_INTERFACE.LIGHTSPECULARINTENSITY
      ENS_PART_MAT_INTERFACE.LIGHTSPECULARREFLECTION
      ENS_PART_MAT_INTERFACE.LIGHTSPECULARSHINE
      ENS_PART_MAT_INTERFACE.LIGHTSPECULARTINT
      ENS_PART_MAT_INTERFACE.LINESTYLE
      ENS_PART_MAT_INTERFACE.LINEWIDTH
      ENS_PART_MAT_INTERFACE.LPARTPARENT
      ENS_PART_MAT_INTERFACE.MATERIALBASETYPE
      ENS_PART_MAT_INTERFACE.MATERIALDESCRIPTION
      ENS_PART_MAT_INTERFACE.MESHTYPE
      ENS_PART_MAT_INTERFACE.METADATA
      ENS_PART_MAT_INTERFACE.METHOD
      ENS_PART_MAT_INTERFACE.MIRRORORIGINAL
      ENS_PART_MAT_INTERFACE.NODEDETAIL
      ENS_PART_MAT_INTERFACE.NODERANGESTEPI
      ENS_PART_MAT_INTERFACE.NODERANGESTEPJ
      ENS_PART_MAT_INTERFACE.NODERANGESTEPK
      ENS_PART_MAT_INTERFACE.NODESCALE
      ENS_PART_MAT_INTERFACE.NODESIZEBY
      ENS_PART_MAT_INTERFACE.NODETYPE
      ENS_PART_MAT_INTERFACE.NODEVARIABLE
      ENS_PART_MAT_INTERFACE.NORMAL
      ENS_PART_MAT_INTERFACE.OPAQUENESS
      ENS_PART_MAT_INTERFACE.PARENT
      ENS_PART_MAT_INTERFACE.PARTNUMBER
      ENS_PART_MAT_INTERFACE.PARTNUMELE
      ENS_PART_MAT_INTERFACE.PARTNUMELECLIENT
      ENS_PART_MAT_INTERFACE.PARTTYPE
      ENS_PART_MAT_INTERFACE.PARTTYPEENUM
      ENS_PART_MAT_INTERFACE.PATHNAME
      ENS_PART_MAT_INTERFACE.PERIODICSECTIONS
      ENS_PART_MAT_INTERFACE.PREDEFINEDMATERIAL
      ENS_PART_MAT_INTERFACE.PROJECT_MASK
      ENS_PART_MAT_INTERFACE.REDUCEPOLYGONS
      ENS_PART_MAT_INTERFACE.REDUCEPOLYGONSFACTOR
      ENS_PART_MAT_INTERFACE.REFFRAME
      ENS_PART_MAT_INTERFACE.RENDERINGREFLECTIONID
      ENS_PART_MAT_INTERFACE.REVERSENORMAL
      ENS_PART_MAT_INTERFACE.SELECTED
      ENS_PART_MAT_INTERFACE.SHADING
      ENS_PART_MAT_INTERFACE.SHOWSFT
      ENS_PART_MAT_INTERFACE.SOURCES
      ENS_PART_MAT_INTERFACE.SPECIFYSYMMETRYORIGIN
      ENS_PART_MAT_INTERFACE.SYMMETRYANGLE
      ENS_PART_MAT_INTERFACE.SYMMETRYAXIS
      ENS_PART_MAT_INTERFACE.SYMMETRYDELTA
      ENS_PART_MAT_INTERFACE.SYMMETRYMIRRORX
      ENS_PART_MAT_INTERFACE.SYMMETRYMIRRORXY
      ENS_PART_MAT_INTERFACE.SYMMETRYMIRRORXYZ
      ENS_PART_MAT_INTERFACE.SYMMETRYMIRRORXZ
      ENS_PART_MAT_INTERFACE.SYMMETRYMIRRORY
      ENS_PART_MAT_INTERFACE.SYMMETRYMIRRORYZ
      ENS_PART_MAT_INTERFACE.SYMMETRYMIRRORZ
      ENS_PART_MAT_INTERFACE.SYMMETRYORIGIN
      ENS_PART_MAT_INTERFACE.SYMMETRYRINSTANCES
      ENS_PART_MAT_INTERFACE.SYMMETRYTYPE
      ENS_PART_MAT_INTERFACE.TEXTURECOORDTYPE
      ENS_PART_MAT_INTERFACE.TEXTUREINTERPOLATION
      ENS_PART_MAT_INTERFACE.TEXTUREMODE
      ENS_PART_MAT_INTERFACE.TEXTUREOBJECT
      ENS_PART_MAT_INTERFACE.TEXTUREORIGIN
      ENS_PART_MAT_INTERFACE.TEXTUREORIGINNODEID
      ENS_PART_MAT_INTERFACE.TEXTUREORIGINUSE
      ENS_PART_MAT_INTERFACE.TEXTUREREPEATMODE
      ENS_PART_MAT_INTERFACE.TEXTURESORIGINNODEID
      ENS_PART_MAT_INTERFACE.TEXTURESVARIABLE
      ENS_PART_MAT_INTERFACE.TEXTURESVECTOR
      ENS_PART_MAT_INTERFACE.TEXTURETORIGINNODEID
      ENS_PART_MAT_INTERFACE.TEXTURETVARIABLE
      ENS_PART_MAT_INTERFACE.TEXTURETVECTOR
      ENS_PART_MAT_INTERFACE.TYPE
      ENS_PART_MAT_INTERFACE.UUID
      ENS_PART_MAT_INTERFACE.VIEWPORTVIS
      ENS_PART_MAT_INTERFACE.VISIBILITYELT
      ENS_PART_MAT_INTERFACE.VISIBILITYLINE
      ENS_PART_MAT_INTERFACE.VISIBILITYNODE
      ENS_PART_MAT_INTERFACE.VISIBLE
      ENS_PART_MAT_INTERFACE.VOLUMEQUALITY
      ENS_PART_MAT_INTERFACE.VOLUMERENDERINGTYPE
      ENS_PART_MAT_INTERFACE.__OBJID__
      ENS_PART_MAT_INTERFACE.objid
   
   